--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </button>
             </form>
         </div>
-        <img src="/img/line.png" alt="" class="line">
+        <img src="/img/boundary_line.png" alt="" class="line">
         <ul id = "tasksList" class="tasks-list">
             <!-- <li class="task">
                 <button class="task-button">
